--- a/core/interfaces/ichunkdbconfig.html
+++ b/core/interfaces/ichunkdbconfig.html
@@ -67,7 +67,7 @@
 				<h3>Type parameters</h3>
 				<ul class="tsd-type-parameters">
 					<li>
-						<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span></h4>
+						<h4>T<span class="tsd-signature-symbol">: </span><a href="icollectiontypes.html" class="tsd-signature-type" data-tsd-kind="Interface">ICollectionTypes</a></h4>
 					</li>
 				</ul>
 			</section>
@@ -103,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">IStorageCacheDriver</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/arswarog/chunk-db/blob/4e49a95/packages/core/src/common.types.ts#L22">common.types.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/97ed7b6/packages/core/src/common.types.ts#L22">common.types.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -113,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">collections<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{</span><span class="tsd-signature-symbol">[ </span><span class="tsd-signature-type">key</span><span class="tsd-signature-symbol"> in </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">symbol</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">: </span><a href="../modules.html#icollectionconfig" class="tsd-signature-type" data-tsd-kind="Type alias">ICollectionConfig</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">key</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/arswarog/chunk-db/blob/4e49a95/packages/core/src/common.types.ts#L21">common.types.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/97ed7b6/packages/core/src/common.types.ts#L21">common.types.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,7 +123,7 @@
 					<div class="tsd-signature tsd-kind-icon">spaces<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Brand</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">&quot;SpaceID&quot;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/arswarog/chunk-db/blob/4e49a95/packages/core/src/common.types.ts#L23">common.types.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/97ed7b6/packages/core/src/common.types.ts#L23">common.types.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -133,7 +133,7 @@
 					<div class="tsd-signature tsd-kind-icon">storage<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IStorageDriver</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/arswarog/chunk-db/blob/4e49a95/packages/core/src/common.types.ts#L20">common.types.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/97ed7b6/packages/core/src/common.types.ts#L20">common.types.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
