--- a/core/classes/query.html
+++ b/core/classes/query.html
@@ -101,7 +101,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="query.html#_query" class="tsd-kind-icon">_query</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="query.html#db" class="tsd-kind-icon">db</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="query.html#delayedref" class="tsd-kind-icon">delayed<wbr>Ref</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="query.html#delayedrefs" class="tsd-kind-icon">delayed<wbr>Refs</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="query.html#model" class="tsd-kind-icon">model</a></li>
 							</ul>
 						</section>
@@ -120,13 +120,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Query&lt;T&gt;<span class="tsd-signature-symbol">(</span>db<span class="tsd-signature-symbol">: </span><a href="chunkdb.html" class="tsd-signature-type" data-tsd-kind="Class">ChunkDB</a>, delayedRef<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DelayedRef</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, model<span class="tsd-signature-symbol">: </span><a href="model.html" class="tsd-signature-type" data-tsd-kind="Class">Model</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, query<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IQuery</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="query.html" class="tsd-signature-type" data-tsd-kind="Class">Query</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Query&lt;T&gt;<span class="tsd-signature-symbol">(</span>db<span class="tsd-signature-symbol">: </span><a href="chunkdb.html" class="tsd-signature-type" data-tsd-kind="Class">ChunkDB</a>, delayedRefs<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DelayedRefs</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, model<span class="tsd-signature-symbol">: </span><a href="model.html" class="tsd-signature-type" data-tsd-kind="Class">Model</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, query<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IQuery</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="query.html" class="tsd-signature-type" data-tsd-kind="Class">Query</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ecf0fdf/packages/core/src/query.ts#L13">query.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/245acc7/packages/core/src/query.ts#L13">query.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -141,7 +141,7 @@
 									<h5>db: <a href="chunkdb.html" class="tsd-signature-type" data-tsd-kind="Class">ChunkDB</a></h5>
 								</li>
 								<li>
-									<h5>delayedRef: <span class="tsd-signature-type">DelayedRef</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>delayedRefs: <span class="tsd-signature-type">DelayedRefs</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 								<li>
 									<h5>model: <a href="model.html" class="tsd-signature-type" data-tsd-kind="Class">Model</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
@@ -163,7 +163,7 @@
 					<div class="tsd-signature tsd-kind-icon">_query<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IQuery</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ecf0fdf/packages/core/src/query.ts#L13">query.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/245acc7/packages/core/src/query.ts#L13">query.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,9 +175,9 @@
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="delayedref" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> delayed<wbr>Ref</h3>
-					<div class="tsd-signature tsd-kind-icon">delayed<wbr>Ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DelayedRef</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<a name="delayedrefs" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> delayed<wbr>Refs</h3>
+					<div class="tsd-signature tsd-kind-icon">delayed<wbr>Refs<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DelayedRefs</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ecf0fdf/packages/core/src/query.ts#L24">query.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/245acc7/packages/core/src/query.ts#L24">query.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -241,7 +241,7 @@
 								<a href="query.html#db" class="tsd-kind-icon">db</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="query.html#delayedref" class="tsd-kind-icon">delayed<wbr>Ref</a>
+								<a href="query.html#delayedrefs" class="tsd-kind-icon">delayed<wbr>Refs</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
 								<a href="query.html#model" class="tsd-kind-icon">model</a>
