deploy: chunk-db/chunk-db@6b9464c170c729d4053488fd65c1a54085167929

--- a/core/interfaces/istoragecachedriver.html
+++ b/core/interfaces/istoragecachedriver.html
@@ -92,7 +92,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragecachedriver.html#clearchunks" class="tsd-kind-icon">clear<wbr>Chunks</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragecachedriver.html#clearspaces" class="tsd-kind-icon">clear<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="istoragecachedriver.html#connect" class="tsd-kind-icon">connect</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragecachedriver.html#getallspaces" class="tsd-kind-icon">get<wbr>All<wbr>Spaces</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="istoragecachedriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="istoragecachedriver.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="istoragecachedriver.html#loadspace" class="tsd-kind-icon">load<wbr>Space</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="istoragecachedriver.html#markdraftchunkasunused" class="tsd-kind-icon">mark<wbr>Draft<wbr>Chunk<wbr>AsUnused</a></li>
@@ -116,7 +116,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L30">storage.types.ts:30</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L32">storage.types.ts:32</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L35">storage.types.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L35">storage.types.ts:35</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -151,24 +151,25 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#connect">connect</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L7">storage.types.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L7">storage.types.ts:7</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
-					<a name="getallspaces" class="tsd-anchor"></a>
-					<h3>get<wbr>All<wbr>Spaces</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>All<wbr>Spaces<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
+					<a name="loadallspaces" class="tsd-anchor"></a>
+					<h3>load<wbr>All<wbr>Spaces</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
+						<li class="tsd-signature tsd-kind-icon">load<wbr>All<wbr>Spaces<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#loadallspaces">loadAllSpaces</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L33">storage.types.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L17">storage.types.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -186,7 +187,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#loadchunk">loadChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L10">storage.types.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L10">storage.types.ts:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -210,7 +211,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#loadspace">loadSpace</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L17">storage.types.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L19">storage.types.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -234,7 +235,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#markdraftchunkasunused">markDraftChunkAsUnused</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L14">storage.types.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L14">storage.types.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -257,7 +258,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L28">storage.types.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L30">storage.types.ts:30</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -281,7 +282,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#savechunk">saveChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L12">storage.types.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L12">storage.types.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -305,7 +306,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="istoragedriver.html">IStorageDriver</a>.<a href="istoragedriver.html#savespace">saveSpace</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L19">storage.types.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L21">storage.types.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -344,8 +345,8 @@
 							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 								<a href="istoragecachedriver.html#connect" class="tsd-kind-icon">connect</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-interface">
-								<a href="istoragecachedriver.html#getallspaces" class="tsd-kind-icon">get<wbr>All<wbr>Spaces</a>
+							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
+								<a href="istoragecachedriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 								<a href="istoragecachedriver.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a>
