--- a/core/interfaces/istoragedriver.html
+++ b/core/interfaces/istoragedriver.html
@@ -84,6 +84,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragedriver.html#connect" class="tsd-kind-icon">connect</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragedriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragedriver.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragedriver.html#loadspace" class="tsd-kind-icon">load<wbr>Space</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="istoragedriver.html#markdraftchunkasunused" class="tsd-kind-icon">mark<wbr>Draft<wbr>Chunk<wbr>AsUnused</a></li>
@@ -106,10 +107,27 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L7">storage.types.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L7">storage.types.ts:7</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+					<a name="loadallspaces" class="tsd-anchor"></a>
+					<h3>load<wbr>All<wbr>Spaces</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+						<li class="tsd-signature tsd-kind-icon">load<wbr>All<wbr>Spaces<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L17">storage.types.ts:17</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -123,7 +141,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L10">storage.types.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L10">storage.types.ts:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -146,7 +164,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L17">storage.types.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L19">storage.types.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -169,7 +187,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L14">storage.types.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L14">storage.types.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -192,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L12">storage.types.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L12">storage.types.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -215,7 +233,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/172daae/packages/core/src/storage.types.ts#L19">storage.types.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/6b9464c/packages/core/src/storage.types.ts#L21">storage.types.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -247,6 +265,9 @@
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="istoragedriver.html#connect" class="tsd-kind-icon">connect</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-interface">
+								<a href="istoragedriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="istoragedriver.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a>
